filter by team works

--- a/masterCSS.css
+++ b/masterCSS.css
@@ -29,3 +29,11 @@ div.tooltip {
     margin-left: 1em;
     margin-right: 1em;
 }
+
+.hidden {
+    display: none;
+}
+
+.initial {
+    display: initial;
+}
