--- a/masterCSS.css
+++ b/masterCSS.css
@@ -19,11 +19,6 @@ div.tooltip {
     justify-content: center;
 }
 
-#chart-wrapper {
-    margin: 0 auto;
-    margin-top: 2em;
-}
-
 #chart {
     display: block; 
     margin: 0 auto;
@@ -42,4 +37,43 @@ div.tooltip {
 
 .initial {
     display: initial;
+}
+
+.app-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.side-menu {
+    margin-top: 4em;
+}
+
+.footer {
+    margin-top: 4em;
+}
+
+.one-label {
+    background-color: red;
+    padding: 0.2em;
+}
+
+.two-label {
+    background-color: blue;
+    color: whitesmoke;
+    padding: 0.2em;
+}
+
+.three-label {
+    background-color: green;
+    padding: 0.2em;
+}
+
+.four-label {
+    background-color: purple;
+    padding: 0.2em;
+}
+
+.five-label {
+    background-color: orange;
+    padding: 0.2em;
 }
