--- a/masterCSS.css
+++ b/masterCSS.css
@@ -1,9 +1,27 @@
 body {
-  background: whitesmoke;
-  font-family: 'Libre Franklin', sans-serif;
+  background: #dcdcdccf;
+  font-family: 'Bowlby One SC', cursive;
+  margin: 0;
+  letter-spacing: 0.05em;
 }
 
+text {
+  font-family: 'Patua One', cursive;
+}
 
+h2 {
+  font-family: 'Francois One', sans-serif;
+  font-weight: lighter;
+}
+
+.header {
+  background: black;
+  color: #f7f7f2;
+  padding: 0.5em;
+  margin-bottom: 0.5em;
+  width: 100%;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
 
 div.tooltip {
   position: absolute;
@@ -21,13 +39,20 @@ div.tooltip {
   text-align: center;
 }
 
+.x-axis-group, .y-axis-group {
+      display: flex;
+    flex-direction: column-reverse;
+}
+
+.x-selector, .y-selector {
+  margin-top: 1em;
+}
+
 #chart {
   display: block;
   margin: 0 auto;
-}
-
-#chart-wrapper {
-  /* margin-top: 2em; */
+  background: white;
+  border: 1px solid grey;
 }
 
 .vertical-center {
@@ -48,12 +73,20 @@ div.tooltip {
 .app-wrapper {
   display: flex;
   justify-content: center;
+  margin-top: 2em;
 }
 
 .side-menu {
-  /* margin-top: 2em; */
-  border: 1px solid black;
+  border: 2px solid #636363;
   padding: 1em;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  margin-left: 1em;
+  background: #f1f1f1;
+}
+
+.side-menu:hover, .tooltip {
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .footer {
@@ -61,8 +94,9 @@ div.tooltip {
 }
 
 .one-label {
-  background-color: red;
+  background-color: #B13019;
   padding: 0.2em;
+  color: whitesmoke;
 }
 
 .two {
@@ -70,24 +104,27 @@ div.tooltip {
 }
 
 .two-label {
-  background-color: blue;
+  background-color: #5C14C8;
   color: whitesmoke;
   padding: 0.2em;
 }
 
 .three-label {
-  background-color: green;
+  background-color: #4FD764;
   padding: 0.2em;
+  color: whitesmoke;
 }
 
 .four-label {
-  background-color: purple;
+  background-color: #F8AC47;
   padding: 0.2em;
+  color: whitesmoke;
 }
 
 .five-label {
-  background-color: orange;
+  background-color: #08D1C0;
   padding: 0.2em;
+  color: whitesmoke;
 }
 
 .season-filter {
@@ -99,19 +136,64 @@ div.tooltip {
 .season-label {
   align-self: center;
   margin-right: 0.5em;
+  color: #2b2b2b;
+}
+
+.logo {
+      margin: 0;
+    font-size: 2em;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
 }
 
 .axis-input {
   display: flex;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
+}
+
+.break-line {
+  margin-top: 1em;
 }
 
 .axis-label {
   min-width: 71px;
   align-self: center;
+  margin: 0;
+  text-align: center;
+
 }
 
 .axis-label:first-child {
     margin-top: 0;
+}
+
+.season-label {
+  margin: 0;
+}
+
+.filter-by-pos-header {
+  margin: 0;
+  margin-bottom: 0.5em;
+}
+
+.filter-by-team-header {
+  margin: 0;
+  margin-top: 0.7em;
+  margin-bottom: 0.2em;
+}
+
+.highlight-player-header {
+  margin: 0;
+  margin-top: 0.3em;
+  margin-bottom: 0.2em;
+}
+
+.team-filter-wrapper {
+  margin-top: 1em;
+  margin-bottom: 0.9em;
+}
+
+.highlight-wrapper {
+  margin-bottom: 0.7em;
 }
