style axis selectors

--- a/masterCSS.css
+++ b/masterCSS.css
@@ -44,9 +44,22 @@ div.tooltip {
     flex-direction: column-reverse;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 7px;
+  border-left: 1px solid rgba(0, 0, 0, .5);
+}
+::-webkit-scrollbar-thumb {
+  /* border-radius: 4px; */
+  background-color: rgba(0, 0, 0, .5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+}
+
 .x-selector, .y-selector {
   margin-top: 1em;
   text-align: center;
+  overflow-x: hidden;
+  overflow-y: scroll;
   
 }
 
