--- a/masterCSS.css
+++ b/masterCSS.css
@@ -217,3 +217,22 @@ select {
     text-align-last: center;
     padding-right: 29px;
 }
+
+.watch-list-header {
+  margin: 0;
+}
+
+.highlighted-players {
+  margin: 0;
+  margin-top: 0.5em;
+  padding: 0;
+  background-color: white;
+  list-style: none;
+}
+
+.watching {
+  padding: 0;
+  text-align: center;
+  text-transform: capitalize;
+  background: white;
+}
