--- a/masterCSS.css
+++ b/masterCSS.css
@@ -98,6 +98,7 @@ div.tooltip {
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   margin-left: 1em;
   background: #f1f1f1;
+  max-height: 650px;
 }
 
 .side-menu:hover, .tooltip {
