--- a/masterCSS.css
+++ b/masterCSS.css
@@ -1,26 +1,26 @@
 body {
   background: #dcdcdccf;
-  font-family: 'Bowlby One SC', cursive;
+  font-family: "Bowlby One SC", cursive;
   margin: 0;
   letter-spacing: 0.05em;
+  overflow-x: hidden;
 }
 
 text {
-  font-family: 'Patua One', cursive;
+  font-family: "Patua One", cursive;
 }
 
 h2 {
-  font-family: 'Francois One', sans-serif;
+  font-family: "Francois One", sans-serif;
   font-weight: lighter;
 }
 
 .header {
   background: black;
   color: #f7f7f2;
-  padding: 0.5em;
   margin-bottom: 0.5em;
   width: 100%;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 div.tooltip {
@@ -39,23 +39,24 @@ div.tooltip {
   text-align: center;
 }
 
-.x-axis-group, .y-axis-group {
-      display: flex;
-    flex-direction: column-reverse;
+.x-axis-group,
+.y-axis-group {
+  display: flex;
+  flex-direction: column-reverse;
 }
 
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 7px;
-  border-left: 1px solid rgba(0, 0, 0, .5);
+  border-left: 1px solid rgba(0, 0, 0, 0.5);
 }
 ::-webkit-scrollbar-thumb {
-  /* border-radius: 4px; */
-  background-color: rgba(0, 0, 0, .5);
-  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
 
-.x-selector, .y-selector {
+.x-selector,
+.y-selector {
   margin-top: 1em;
   text-align: center;
   overflow-x: hidden;
@@ -94,15 +95,16 @@ div.tooltip {
 .side-menu {
   border: 2px solid #636363;
   padding: 1em;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   margin-left: 1em;
   background: #f1f1f1;
   max-height: 650px;
 }
 
-.side-menu:hover, .tooltip {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+.side-menu:hover,
+.tooltip {
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 .footer {
@@ -111,7 +113,7 @@ div.tooltip {
 }
 
 .one-label {
-  background-color: #B13019;
+  background-color: #b13019;
   padding: 0.2em;
   color: whitesmoke;
 }
@@ -121,25 +123,25 @@ div.tooltip {
 }
 
 .two-label {
-  background-color: #5C14C8;
+  background-color: #5c14c8;
   color: whitesmoke;
   padding: 0.2em;
 }
 
 .three-label {
-  background-color: #4FD764;
+  background-color: #4fd764;
   padding: 0.2em;
   color: whitesmoke;
 }
 
 .four-label {
-  background-color: #F8AC47;
+  background-color: #f8ac47;
   padding: 0.2em;
   color: whitesmoke;
 }
 
 .five-label {
-  background-color: #08D1C0;
+  background-color: #08d1c0;
   padding: 0.2em;
   color: whitesmoke;
 }
@@ -157,10 +159,10 @@ div.tooltip {
 }
 
 .logo {
-      margin: 0;
-    font-size: 2em;
-    padding-top: 0.3em;
-    padding-bottom: 0.1em;
+  margin: 0;
+  font-size: 2em;
+  padding-top: 0.3em;
+  padding-bottom: 0.1em;
 }
 
 .axis-input {
@@ -178,11 +180,10 @@ div.tooltip {
   align-self: center;
   margin: 0;
   text-align: center;
-
 }
 
 .axis-label:first-child {
-    margin-top: 0;
+  margin-top: 0;
 }
 
 .season-label {
@@ -216,8 +217,8 @@ div.tooltip {
 }
 
 select {
-    text-align-last: center;
-    padding-right: 29px;
+  text-align-last: center;
+  padding-right: 29px;
 }
 
 .watch-list-header {
@@ -258,5 +259,5 @@ select {
 
 .sub-title {
   margin: 0;
-  margin-bottom: 0.3em;
+  padding-bottom: 0.5em;
 }
