--- a/masterCSS.css
+++ b/masterCSS.css
@@ -261,3 +261,26 @@ select {
   margin: 0;
   padding-bottom: 0.5em;
 }
+
+.information-open {
+  text-orientation: upright;
+  writing-mode: tb-rl;
+  align-self: center;
+  position: fixed;
+  left: 0;
+  top: 35%;
+}
+
+.information-open:hover {
+  cursor: pointer;
+}
+
+#information {
+  width: 0;
+  z-index: 10;
+  overflow-x: hidden;
+  transition: 0.5s;
+  left: 0;
+  top: 35%;
+  position: fixed;
+}
