change css for info menu

--- a/masterCSS.css
+++ b/masterCSS.css
@@ -287,7 +287,7 @@ select {
   top: 5%;
   position: fixed;
   text-align: center;
-  background: #da9393;
+  background: #92b7d2;
   padding-top: 0.4em;
   padding-bottom: 0.4em;
 }
