update css on side-menu

--- a/masterCSS.css
+++ b/masterCSS.css
@@ -99,7 +99,8 @@ div.tooltip {
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   margin-left: 1em;
   background: #f1f1f1;
-  max-height: 650px;
+  max-height: 652px;
+  box-sizing: border-box;
 }
 
 .side-menu:hover,
